--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # ================================
 # PYTHON & DJANGO
 # ================================
-
+COMANDOSTESTS.md
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
